@@ -15,13 +15,3 @@ ModifyIssueTags           = "Poi: Modify issue tags"
 ModifyIssueWatchers       = "Poi: Modify issue watchers"
 ModifyIssueTargetRelease  = "Poi: Modify issue target release"
 UploadAttachment          = "Poi: Upload attachment"
-
-# These can probably all be done in rolemap.xml.
-CMFCorePermissions.setDefaultRoles(EditResponse, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueSeverity, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueAssignment, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueState, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueTags, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueWatchers, ['Manager'])
-CMFCorePermissions.setDefaultRoles(ModifyIssueTargetRelease, ['Manager'])
-CMFCorePermissions.setDefaultRoles(UploadAttachment, ['Manager', 'Member'])
