@@ -8,5 +8,38 @@
       <role name="Manager"/>
       <role name="TrackerManager" />
     </permission>
+    <permission name="Poi: Edit response" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue severity" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue assignment" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue state" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue tags" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue watchers" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Modify issue target release" acquire="True">
+      <role name="Manager"/>
+      <role name="TrackerManager" />
+    </permission>
+    <permission name="Poi: Upload attachment" acquire="True">
+      <role name="Manager"/>
+      <role name="Member" />
+      <role name="TrackerManager" />
+    </permission>
   </permissions>
 </rolemap>
